# smoke

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  train.py
.devcontainer/: Dockerfile  devcontainer.json
deploy/: README.md  config.yaml  docker-compose.yml
local/: REDME.md  camera.py  camera_stream.py  test_client.py  webhook_receiver.py
server/: README.md  config.yaml  main.py
server/alert/: manager.py  webhook.py
server/core/: camera_worker.py  detector.py  streamer.py
server/preview/: __init__.py  app.py
server/utils/: draw.py  logger.py
utils/: merge_smoking_to_smoking4.py
